# dream-of-daw

./: README.md
do-daw/: .gitignore  Cargo.toml  cross-build-deps  index.html  justfile  pyproject.toml
do-daw/src/: cursor.rs  do_daw_test.rs  lib.rs  main.rs  mixer.rs  plugin_chain.rs  step_sequencer.rs  traits.rs
do-daw/src/bin.bak/: do-daw.rs
do-daw/src/step_sequencer/: audio_wrapper.rs
dream-of-daw/: .gitignore  Dream-of-DAW.sh  Dreams-Of-DAW.pygame  PedalBoard.pygame.bak  prelude.py
dream-of-daw/dream_of_daw/: bottom_right.py  channel_switch.py  config.py  controls.py  logger.py  piano.py  sections.py  step_buttons.py
dream-of-daw/helpers/: mk_drum_note_dict.py
