[package]
name = "do_daw"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "do_daw"
crate-type = ["cdylib", "rlib"]

[dependencies]
biquad = "0.5.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
env_logger = "0.11.8"
log = "0.4.29"
midi-msg = "0.8.1"
midir = "0.10.3"
# pyo3 = "0.27.0"
# pyo3 = { version = "0.27.0", features = ["extension-module", "abi3", "abi3-py312"] }
# pyo3 = { version = "0.27.0", features = ["extension-module"] }
pyo3 = { version = "0.28", features = ["extension-module"] }
rack = { git = "https://github.com/calacuda/rack", version = "0.4.8", features = ["vst3"] }
rayon = "1.11.0"
tinyaudio = { version = "2.0.0", features = ["alsa"] }

[profile.release]
strip = "debuginfo"
lto = true
codegen-units = 1
opt-level = 3

